kubernetes/apps/default/continuwuity/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity-well-known
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - goyangi.io
  rules:
    - matches:
        - path:
            type: Exact
            value: /.well-known/matrix/client
        - path:
            type: Exact
            value: /.well-known/matrix/server
        - path:
            type: Exact
            value: /.well-known/matrix/support
      backendRefs:
        - name: continuwuity
          port: 6167
